Fix: Fix overflowing content on mobile

--- a/app/globals.css
+++ b/app/globals.css
@@ -46,7 +46,6 @@
 
 html {
 	min-height: 100%;
-	height: 100%;
 	font-family: var(--font-source-sans-pro), sans-serif;
 	cursor: default !important;
 }
